// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateStyles creates file with colors according to provided config 1`] = `
{
  "/ui/theme/colors.js": "
      /* eslint-disable max-lines */
      /* eslint-disable @typescript-eslint/naming-convention */
      module.exports = {"text/txt900":"#2a3fff"};
      ",
}
`;

exports[`generateStyles creates file with effects according to provided config 1`] = `
{
  "/ui/theme/effects.js": "
      /* eslint-disable max-lines */
      /* eslint-disable @typescript-eslint/naming-convention */
      module.exports = {boxShadow: {"shadow200":"0px 18px 88px rgba(24, 39, 75, 0.14)"}};
      ",
}
`;

exports[`generateStyles creates file with gradient styles according to provided config 1`] = `
{
  "/ui/theme/gradients.js": "
      /* eslint-disable max-lines */
      /* eslint-disable @typescript-eslint/naming-convention */
      module.exports = {"gradients/label":"radial-gradient(rgba(4, 206, 215, 1.00),rgba(100, 106, 230, 1.00),rgba(233, 72, 130, 1.00),rgba(255, 239, 101, 1.00))"};
      ",
}
`;

exports[`generateStyles creates file with text styles according to provided config 1`] = `
{
  "/ui/theme/text-styles.js": "
      /* eslint-disable max-lines */
      /* eslint-disable @typescript-eslint/naming-convention */
      
      const fontFamily = {"font1":"'Hind Vadodara', Arial, sans-serif"};

      const textVariants = {'heading/bs-h500': {
      fontFamily: fontFamily.font1,
      fontSize: 32,
      fontWeight: 600,
      textTransform: "initial",
      lineHeight: 1.12,
      
      
    },'heading/h400': {
      fontFamily: fontFamily.font1,
      fontSize: 32,
      fontWeight: 600,
      textTransform: "initial",
      lineHeight: 1.12,
      
      
    },'heading/h500-bs': {
      fontFamily: fontFamily.font1,
      fontSize: 32,
      fontWeight: 600,
      textTransform: "initial",
      lineHeight: 1.12,
      
      
    },'heading/h500-lg': {
      fontFamily: fontFamily.font1,
      fontSize: 46,
      fontWeight: 600,
      textTransform: "initial",
      lineHeight: 0.78,
      letterSpacing: 2.3px,
      
    },'heading/h500-md': {
      fontFamily: fontFamily.font1,
      fontSize: 42,
      fontWeight: 600,
      textTransform: "initial",
      lineHeight: 0.85,
      
      
    },'heading/h500-sm': {
      fontFamily: fontFamily.font1,
      fontSize: 38,
      fontWeight: 600,
      textTransform: "initial",
      lineHeight: 0.94,
      
      
    }};;

      module.exports = {fontFamily, textVariants}
      ",
}
`;

exports[`generateStyles merge text styles creates file with merged text styles according to provided screen sizes from config 1`] = `
{
  "/ui/theme/text-styles.js": "
      /* eslint-disable max-lines */
      /* eslint-disable @typescript-eslint/naming-convention */
      
      const fontFamily = {"font1":"'Hind Vadodara', Arial, sans-serif"};

      const textVariants = {'heading/bs-h500': {
      fontFamily: fontFamily.font1,
      fontSize: 32,
      fontWeight: 600,
      textTransform: "initial",
      lineHeight: 1.12,
      
      
    },'heading/h400': {
      fontFamily: fontFamily.font1,
      fontSize: 32,
      fontWeight: 600,
      textTransform: "initial",
      lineHeight: 1.12,
      
      
    },'heading/h500': {
      fontFamily: fontFamily.font1,
      fontSize: 32,
      fontWeight: 600,
      textTransform: "initial",
      lineHeight: 1.12,
      
      '@media (min-width: 600px)': {
      fontFamily: fontFamily.font1,
      fontSize: 38,
      fontWeight: 600,
      textTransform: "initial",
      lineHeight: 0.94,
      
    },'@media (min-width: 900px)': {
      fontFamily: fontFamily.font1,
      fontSize: 42,
      fontWeight: 600,
      textTransform: "initial",
      lineHeight: 0.85,
      
    },'@media (min-width: 1200px)': {
      fontFamily: fontFamily.font1,
      fontSize: 46,
      fontWeight: 600,
      textTransform: "initial",
      lineHeight: 0.78,
      letterSpacing: 2.3px,
    }
    },'heading/h500-bs': {
      fontFamily: fontFamily.font1,
      fontSize: 32,
      fontWeight: 600,
      textTransform: "initial",
      lineHeight: 1.12,
      
      
    },'heading/h500-lg': {
      fontFamily: fontFamily.font1,
      fontSize: 46,
      fontWeight: 600,
      textTransform: "initial",
      lineHeight: 0.78,
      letterSpacing: 2.3px,
      
    },'heading/h500-md': {
      fontFamily: fontFamily.font1,
      fontSize: 42,
      fontWeight: 600,
      textTransform: "initial",
      lineHeight: 0.85,
      
      
    },'heading/h500-sm': {
      fontFamily: fontFamily.font1,
      fontSize: 38,
      fontWeight: 600,
      textTransform: "initial",
      lineHeight: 0.94,
      
      
    }};;

      module.exports = {fontFamily, textVariants}
      ",
}
`;
